# persona-survey

./: README.md  api.py  client_example.py  persona.ipynb  persona_survey.py  pyproject.toml  survey_results.json
